[project]
name = "reqtor"
version = "0.1.0"
description = "A simple API testing library with dot-notation syntax"
readme = "README.md"
requires-python = ">=3.13"
authors = [ { name = "Riccione" } ]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.34.2",
]

[project.urls]
Homepage = "https://github.com/riccione/reqtor"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reqtor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: tests that hit real external APIs (deselect with '-m \"not live\"')",
]

[[tool.uv.index]]
name = "reqtor"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

